Implemented make game to run game in terminal
- took out sequence from bin dune file so it would compile (needs to be added back)
- edited main to print a thing
- added 'make chat' command to make file

--- a/sequence/Makefile
+++ b/sequence/Makefile
@@ -19,6 +19,9 @@ build:
 
 doc:
 	dune build @doc
+
+game:
+	OCAMLRUNPARAM=b dune exec bin/main.exe
 test:
 	OCAMLRUNPARAM=b dune exec test/main.exe
 
